--- a/src/main/resources/templates/addCreator.html
+++ b/src/main/resources/templates/addCreator.html
@@ -59,21 +59,23 @@
 
 
                                 <form id="creator-form" th:method="POST" enctype="multipart/form-data"
-                                      th:action="@{/creators/add}" role="form" style="display: block;" th:object="${creator}">
+                                      th:action="@{/creators/add}" role="form" style="display: block;"
+                                      th:object="${creator}">
 
 
                                     <div class="form-group">
                                         <input type="text" name="brand" id="brand" tabindex="1"
                                                class="form-control" placeholder="Name" value=""
                                                th:field="*{name}" th:errorclass="invalid-field">
-                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('name'), '; ')}">
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('name'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="text" name="description" id="description" tabindex="2"
                                                class="form-control" placeholder="Description"
                                                th:field="*{description}" th:errorclass="invalid-field">
-                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('description'), '; ')}">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('description'), '; ')}">
                                         </div>
                                     </div>
                                     <div class="form-group" id="image-group">
@@ -83,12 +85,14 @@
                                         <input class="form-control" type="file"
                                                id="formFile" accept=".jpg, .jpeg, .png"
                                                th:field="*{picture}" th:errorclass="invalid-field">
-                                        <div class="error"  th:text="*{picture}">
-                                        </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
-                                        <thead><tr><th>File Uploaded(Maximum 1):</th></tr></thead>
+                                        <thead>
+                                        <tr>
+                                            <th>File Uploaded(Maximum 1):</th>
+                                        </tr>
+                                        </thead>
                                         <tbody>
                                         </tbody>
                                     </table>
