--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -90,8 +90,7 @@
                         <h2 class="mt-5" th:text="|*{price}€|">
                         </h2>
 
-<!--                        todo: can buy only if its not owner nor admin-->
-                        <th:block th:unless="${#authorization.expression('isOwner(__${offer.id}__)')}">
+                        <th:block th:unless="${#authorization.expression('isOwner(__${offer.id}__)')}" th:if="${#authorization.expression('canBuy(__${offer.id}__)')}">
                             <button class="btn btn-dark btn-rounded mr-1" data-toggle="tooltip" title=""
                                     data-original-title="Add to cart" id="add-cart-btn"
                                     th:classappend="${#authorization.expression('hasCarted(__${offer.id}__)')} ? 'carted' : ''"
